--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
-
-    "express-rate-limit": "^7.5.0",
+    "typeorm": "^0.3.20",
     "jsonwebtoken": "^9.0.2",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,6 +37,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@types/speakeasy": "^2.0.10",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "@types/nodemailer": "^6.4.17",
