--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/supertest": "^6.0.2",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
-    "express-async-handler": "^1.2.0",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
+    "supertest": "^7.0.0",
     "typeorm": "^0.3.20",
     "zod": "^3.24.1"
   },
