--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
-
-    "express-rate-limit": "^7.5.0",
-    "jsonwebtoken": "^9.0.2",
+    "typeorm": "^0.3.20",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
