--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
@@ -42,6 +44,7 @@
     "@types/node": "^22.10.7",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.11",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
