--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,6 @@ JWT_EXPIRES_IN=24h
 PORT=3000
 NODE_ENV=development
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379
-
 # Rate Limiting Configuration
 RATE_LIMIT_LOGIN_MAX=5
 RATE_LIMIT_LOGIN_WINDOW_MS=900000
@@ -25,3 +22,9 @@ RATE_LIMIT_PASSWORD_RESET_MAX=3
 RATE_LIMIT_PASSWORD_RESET_WINDOW_MS=3600000
 RATE_LIMIT_2FA_MAX=3
 RATE_LIMIT_2FA_WINDOW_MS=900000
+
+#Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_URL=redis://localhost:6379
+
