--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@sentry/node": "^7.101.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
@@ -45,7 +48,9 @@
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
+    "dd-trace": "^4.26.0",
     "jest": "^29.7.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
@@ -55,5 +60,6 @@
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
     "typescript": "^5.7.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
