--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint 'src/**/*.ts'",
+    "format:check": "prettier --check 'src/**/*.ts'",
+    "format:fix": "prettier --write 'src/**/*.ts'",
+    "test:coverage": "jest --coverage",
+    "migration:run": "npx typeorm migration:run -- -d src/config/db.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +35,6 @@
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "rate-limit-redis": "^4.2.0",
-    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "@sentry/node": "^7.101.1",
+    "@eslint/js": "^9.21.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
@@ -58,14 +63,15 @@
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
     "dd-trace": "^4.26.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2",
+    "prettier": "^3.5.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
