--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "latest"
           cache: "npm"
 
       - name: Install dependencies
