--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
