--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "rate-limit-redis": "^4.2.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
@@ -42,8 +43,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@sentry/node": "^7.101.1",
     "@eslint/js": "^9.21.0",
+    "@sentry/node": "^7.101.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
@@ -60,6 +61,8 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "bcrypt": "^5.1.1",
     "dd-trace": "^4.26.0",
     "eslint": "^9.21.0",
