--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,10 +47,10 @@ jobs:
         run: docker build -t paystell-backend .
 
       - name: Run Docker Containers
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Run Tests in Docker
         run: docker exec paystell-backend npm test
 
       - name: Stop and Remove Docker Containers
-        run: docker-compose down
+        run: docker compose down
