--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Run Docker Containers
         run: |
           docker compose up -d
-          sleep 10  # Esperar a que los contenedores estén listos
+          sleep 15  # Esperar a que los contenedores estén listos
+          docker ps  # Verificar que los contenedores están corriendo
 
       - name: Run Tests in Docker
         run: docker exec paystell-backend npx jest --maxWorkers=2
