--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "auth0-js": "^9.28.0",
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-openid-connect": "^2.18.0",
     "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.1.2",
@@ -47,6 +51,7 @@
     "@sentry/node": "^7.101.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
